tests/functional/lang/eval-fail-intersectAttrs-1.err.exp
error:
       … while calling the 'intersectAttrs' builtin
         at /pwd/lang/eval-fail-intersectAttrs-1.nix:1:1:
            1| builtins.intersectAttrs [ ] [ ]
             | ^
            2|

       … while evaluating the first argument passed to builtins.intersectAttrs

       error: expected a set but found a list: [ ]
